--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "8337bbd2-001e-4f2c-969c-0ca601f4366c"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
